fixed npe case